# traitify

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
core/: Cargo.toml
core/src/: lib.rs
core/tests/: test_attribute.rs
macro/: Cargo.toml
macro/src/: lib.rs
