[package]
name = "traitify"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A macro to turn an impl block into a trait"
homepage = "https://github.com/diondokter/traitify"
repository = "https://github.com/diondokter/traitify"
readme = "../../README.md"
keywords = ["trait", "generic", "dyn", "macro"]

[lib]
name = "traitify"
path = "src/lib.rs"
proc-macro = true

[dependencies]
traitify-core = { version = "0.1.0", path = "../core" }
